--- a/public/faq/factory-reset/index.print.html
+++ b/public/faq/factory-reset/index.print.html
@@ -26,18 +26,18 @@
     <link href="http://localhost:1313/faq/factory-reset/index.html" rel="canonical" type="text/html" title="重置Homeassistant盒子，恢复出厂设置 :: HaBox 技术支持站">
     <link href="../../faq/factory-reset/index.xml" rel="alternate" type="application/rss+xml" title="重置Homeassistant盒子，恢复出厂设置 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../../css/print.css?1741570537" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1741570537" rel="stylesheet">
-    <script src="../../js/variant.js?1741570537"></script>
+    <link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../../css/print.css?1741607855" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1741607855" rel="stylesheet">
+    <script src="../../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -75,7 +75,7 @@
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">重置Homeassistant盒子，恢复出厂设置</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../faq/wireless-network-card/index.html" title="无线网卡不能使用的临时解决方案 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../faq/xiaomi-home/index.html" title="重新安装最新的小米官方插件 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../about/index.html" title="5 关于我们 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -99,8 +99,8 @@
 <li>删除隐藏目录，没有任何提示，删除后执行reboot重启，命令：</li>
 </ol>
 <div class="highlight wrap-code"><pre tabindex="0"><code>rm -rf /mnt/data/supervisor/homeassistant/.storage/
-reboot</code></pre></div><p><a href="https://www.ha-box.xyz/faq/index.html#R-image-6ead33258d066c62d1e8ce6c491f3276" rel="external" target="_self"><a href="#R-image-5e769d23e8357a8c105be3582844604c" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5e769d23e8357a8c105be3582844604c"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></a></p>
+reboot</code></pre></div><p><a href="https://www.ha-box.xyz/faq/index.html#R-image-6ead33258d066c62d1e8ce6c491f3276" rel="external" target="_self"><a href="#R-image-4a48ec9e4111efe986ce5de6e5c0c982" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4a48ec9e4111efe986ce5de6e5c0c982"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></a></p>
 
 <script
   id="utteranc"
@@ -133,9 +133,9 @@ reboot</code></pre></div><p><a href="https://www.ha-box.xyz/faq/index.html#R-ima
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../../js/theme.js?1741570537" defer></script>
+    <script src="../../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../../js/theme.js?1741607855" defer></script>
 
 
   </body>
