--- a/public/index.html
+++ b/public/index.html
@@ -31,17 +31,17 @@ Homeassistant盒子链接">
     <link href="./index.xml" rel="alternate" type="application/rss+xml" title="Homeassistant使用教程 :: HaBox 技术支持站">
     <link href="./index.print.html" rel="alternate" type="text/html" title="Homeassistant使用教程 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="./css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="./css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1741570537" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1741570537" rel="stylesheet">
-    <link href="./css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1741570537"></script>
+    <link href="./css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="./css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="./css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1741607855" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1741607855" rel="stylesheet">
+    <link href="./css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -121,8 +121,8 @@ Homeassistant盒子链接">
 
 <p><a href="https://www.goofish.com/personal?userId=2209420746666" rel="external" target="_self">HABox智能家居盒子</a> 本站唯一店铺，请点击连接进入选购</p>
 <p><a href="https://www.goofish.com/item?id=868904979582&categoryId=50023914" rel="external" target="_self">Homeassistant盒子链接</a></p>
-<p><a href="#R-image-ba270758ee8a060022e9fbae64608158" class="lightbox-link"><img alt="截图 2025-03-10 09-02-56" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250310092729679.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ba270758ee8a060022e9fbae64608158"><img alt="截图 2025-03-10 09-02-56" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250310092729679.png"></a></p>
+<p><a href="#R-image-5b7fecfc994f2b58f37d30ed25ae80cb" class="lightbox-link"><img alt="截图 2025-03-10 09-02-56" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250310092729679.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5b7fecfc994f2b58f37d30ed25ae80cb"><img alt="截图 2025-03-10 09-02-56" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250310092729679.png"></a></p>
 <ul>
 <li>安装维护
 <ul>
@@ -156,8 +156,8 @@ Homeassistant盒子链接">
 <li><a href="./about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍</a></li>
 <li><a href="./about/brand-new-boxes-arrived/index.html">新到一批Homeassistant盒子，几乎没有瑕疵</a></li>
 </ul>
-<p><a href="#R-image-258dcb3677f1d809f49f52e155b7a872" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-258dcb3677f1d809f49f52e155b7a872"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
+<p><a href="#R-image-7fd5ed80986a6b7a19515fd4823ebf1c" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7fd5ed80986a6b7a19515fd4823ebf1c"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -253,13 +253,13 @@ Homeassistant盒子链接">
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1741570537" defer></script>
-        <script src="./js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="./js/search.js?1741570537" defer></script>
+        <script src="./js/auto-complete.js?1741607855" defer></script>
+        <script src="./js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="./js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -291,6 +291,7 @@ Homeassistant盒子链接">
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="./faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="./faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="./faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="./faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="./faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="./about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="./about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -365,9 +366,9 @@ Homeassistant盒子链接">
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1741570537" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="./js/theme.js?1741570537" defer></script>
+    <script src="./js/clipboard.min.js?1741607855" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="./js/theme.js?1741607855" defer></script>
 
 
   </body>
