--- a/public/about/brand-new-boxes-arrived/index.html
+++ b/public/about/brand-new-boxes-arrived/index.html
@@ -30,17 +30,17 @@
     <link href="../../about/brand-new-boxes-arrived/index.xml" rel="alternate" type="application/rss+xml" title="新到一批Homeassistant盒子，几乎没有瑕疵 :: HaBox 技术支持站">
     <link href="../../about/brand-new-boxes-arrived/index.print.html" rel="alternate" type="text/html" title="新到一批Homeassistant盒子，几乎没有瑕疵 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../../css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1741570537"></script>
+    <link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../../css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -115,26 +115,26 @@
 
 <p>新到一批Homeassistant盒子，CM31101A和M401A，都是晶晨S905l3a芯片，2+16大内存</p>
 <p>有需要的老铁们请联系我</p>
-<p><a href="#R-image-d3a6156fd4bbd84abd4f33f75ff1e884" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211022595.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d3a6156fd4bbd84abd4f33f75ff1e884"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211022595.jpeg"></a></p>
-<p><a href="#R-image-bae1d89a9e61fd9aa58e98f7a2716021" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021570.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bae1d89a9e61fd9aa58e98f7a2716021"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021570.jpeg"></a></p>
-<p><a href="#R-image-c8a3477b9a5946000164dd3d6dd16b59" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211022793.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c8a3477b9a5946000164dd3d6dd16b59"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211022793.jpeg"></a></p>
-<p><a href="#R-image-235c99fcb71930caf176b1fedc54a76c" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021915.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-235c99fcb71930caf176b1fedc54a76c"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021915.jpeg"></a></p>
-<p><a href="#R-image-8de1b29fc40bb54c68ec955272d0f7db" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211027120.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8de1b29fc40bb54c68ec955272d0f7db"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211027120.jpeg"></a></p>
-<p><a href="#R-image-85b2e76df2e119c00e3f8cff5ee152cd" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021644.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-85b2e76df2e119c00e3f8cff5ee152cd"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021644.jpeg"></a></p>
-<p><a href="#R-image-4eeb7c9a52e26acaf4b1105e4fec4203" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028035.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4eeb7c9a52e26acaf4b1105e4fec4203"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028035.jpeg"></a></p>
-<p><a href="#R-image-f9b9f59e8b2527f6c0f0c5cefa917e5e" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021896.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9b9f59e8b2527f6c0f0c5cefa917e5e"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021896.jpeg"></a></p>
-<p><a href="#R-image-9b2c26e0f13cb4ba300126034277a054" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028898.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9b2c26e0f13cb4ba300126034277a054"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028898.jpeg"></a></p>
-<p><a href="#R-image-45d940fcdfbd65dacf58e043cc20cf9b" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028123.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-45d940fcdfbd65dacf58e043cc20cf9b"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028123.png"></a></p>
+<p><a href="#R-image-7cdb6c602bc270236503cffc20eef473" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211022595.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7cdb6c602bc270236503cffc20eef473"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211022595.jpeg"></a></p>
+<p><a href="#R-image-f92c533579810c1acbe075a4d909f524" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021570.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f92c533579810c1acbe075a4d909f524"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021570.jpeg"></a></p>
+<p><a href="#R-image-54e28bd933f317410405323d46d2ead5" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211022793.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-54e28bd933f317410405323d46d2ead5"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211022793.jpeg"></a></p>
+<p><a href="#R-image-2540a1a93c38e61954f39dc1b076feac" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021915.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2540a1a93c38e61954f39dc1b076feac"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021915.jpeg"></a></p>
+<p><a href="#R-image-d96e2aa506ccf85e34941d80151b0b74" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211027120.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d96e2aa506ccf85e34941d80151b0b74"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211027120.jpeg"></a></p>
+<p><a href="#R-image-924cbba7164be389b4735f88dfb14bb4" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021644.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-924cbba7164be389b4735f88dfb14bb4"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021644.jpeg"></a></p>
+<p><a href="#R-image-b8a7f7b910e2bf8dee1701048568a627" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028035.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b8a7f7b910e2bf8dee1701048568a627"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028035.jpeg"></a></p>
+<p><a href="#R-image-884f8ddf1c8535c1c26cdb41eb100be8" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211021896.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-884f8ddf1c8535c1c26cdb41eb100be8"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211021896.jpeg"></a></p>
+<p><a href="#R-image-7e52b703829557274efb22fcb51e20a7" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028898.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7e52b703829557274efb22fcb51e20a7"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028898.jpeg"></a></p>
+<p><a href="#R-image-468cadf88f2c3d6746edf161e805b83a" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412211028123.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-468cadf88f2c3d6746edf161e805b83a"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412211028123.png"></a></p>
 
 <script
   id="utteranc"
@@ -230,13 +230,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="../../js/search.js?1741570537" defer></script>
+        <script src="../../js/auto-complete.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="../../js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -268,6 +268,7 @@
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="../../faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="../../faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="../../faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="../../faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="../../faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class="parent "><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a" checked><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -342,9 +343,9 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../../js/theme.js?1741570537" defer></script>
+    <script src="../../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../../js/theme.js?1741607855" defer></script>
 
 
   </body>
