--- a/public/about/index.html
+++ b/public/about/index.html
@@ -46,17 +46,17 @@ HA盒子，找我就行，包您满意，诚信经营。
     <link href="../about/index.xml" rel="alternate" type="application/rss+xml" title="5 关于我们 :: HaBox 技术支持站">
     <link href="../about/index.print.html" rel="alternate" type="text/html" title="5 关于我们 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1741570537"></script>
+    <link href="../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -143,11 +143,11 @@ HA盒子，找我就行，包您满意，诚信经营。
 <h2 id="联系我们"><strong>联系我们</strong></h2>
 <p>【闲鱼】<a href="https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE" rel="external" target="_self">https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE</a> MF1643 「这是我的闲鱼号，快来看看吧～」
 点击链接直接打开</p>
-<p><a href="#R-image-6d503bdab883ed104d2bac193aeb032e" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6d503bdab883ed104d2bac193aeb032e"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
+<p><a href="#R-image-469b22585560bf397820b90f9f6db599" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-469b22585560bf397820b90f9f6db599"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
 <p>QQ群</p>
-<p><a href="#R-image-c65dadaf1e3ef5602caaee0d19e4d479" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c65dadaf1e3ef5602caaee0d19e4d479"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
+<p><a href="#R-image-354b478bf6068673ff90e510dc1fbc4f" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-354b478bf6068673ff90e510dc1fbc4f"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -243,13 +243,13 @@ HA盒子，找我就行，包您满意，诚信经营。
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1741570537" defer></script>
-        <script src="../js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="../js/search.js?1741570537" defer></script>
+        <script src="../js/auto-complete.js?1741607855" defer></script>
+        <script src="../js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="../js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -281,6 +281,7 @@ HA盒子，找我就行，包您满意，诚信经营。
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="../faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="../faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="../faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="../faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="../faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class="active parent "><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a" checked><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -355,9 +356,9 @@ HA盒子，找我就行，包您满意，诚信经营。
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../js/theme.js?1741570537" defer></script>
+    <script src="../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../js/theme.js?1741607855" defer></script>
 
 
   </body>
