--- a/public/faq/disk-space/index.html
+++ b/public/faq/disk-space/index.html
@@ -30,17 +30,17 @@
     <link href="../../faq/disk-space/index.xml" rel="alternate" type="application/rss+xml" title="Homeassistant磁盘空间快满 :: HaBox 技术支持站">
     <link href="../../faq/disk-space/index.print.html" rel="alternate" type="text/html" title="Homeassistant磁盘空间快满 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../../css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1741570537"></script>
+    <link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../../css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -134,10 +134,10 @@
 <p>recorder: purge_keep_days: 5</p>
 <h4 id="3删除备份文件">3）删除备份文件</h4>
 <p>设置-系统-备份</p>
-<p><a href="https://www.ha-box.xyz/faq/index.html#R-image-b64cefa1e0a8dd9765ee039f6428ed5b" rel="external" target="_self"><a href="#R-image-359d4211b248836a87600c1b57175053" class="lightbox-link"><img alt="5304065944B9F37195F37C64FE48A21C" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250107204727798.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-359d4211b248836a87600c1b57175053"><img alt="5304065944B9F37195F37C64FE48A21C" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250107204727798.png"></a></a></p>
-<p><a href="https://www.ha-box.xyz/faq/index.html#R-image-d82aa28dfe6425b5ebbc910dfe30a146" rel="external" target="_self"><a href="#R-image-13096954cacebb2df4628db620326a3f" class="lightbox-link"><img alt="A1B9198B7B9170BB0432827C3DC2D635" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250107204804562.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-13096954cacebb2df4628db620326a3f"><img alt="A1B9198B7B9170BB0432827C3DC2D635" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250107204804562.png"></a></a></p>
+<p><a href="https://www.ha-box.xyz/faq/index.html#R-image-b64cefa1e0a8dd9765ee039f6428ed5b" rel="external" target="_self"><a href="#R-image-99daf3ba28679ed60a31137fb767d24d" class="lightbox-link"><img alt="5304065944B9F37195F37C64FE48A21C" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250107204727798.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-99daf3ba28679ed60a31137fb767d24d"><img alt="5304065944B9F37195F37C64FE48A21C" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250107204727798.png"></a></a></p>
+<p><a href="https://www.ha-box.xyz/faq/index.html#R-image-d82aa28dfe6425b5ebbc910dfe30a146" rel="external" target="_self"><a href="#R-image-0cd7da2f9aa3cdfefdf1d58775765a0f" class="lightbox-link"><img alt="A1B9198B7B9170BB0432827C3DC2D635" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/20250107204804562.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0cd7da2f9aa3cdfefdf1d58775765a0f"><img alt="A1B9198B7B9170BB0432827C3DC2D635" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/20250107204804562.png"></a></a></p>
 
 <script
   id="utteranc"
@@ -233,13 +233,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="../../js/search.js?1741570537" defer></script>
+        <script src="../../js/auto-complete.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="../../js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -271,6 +271,7 @@
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="../../faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="../../faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="../../faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="../../faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="../../faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -345,9 +346,9 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../../js/theme.js?1741570537" defer></script>
+    <script src="../../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../../js/theme.js?1741607855" defer></script>
 
 
   </body>
