--- a/public/faq/reset-password/index.html
+++ b/public/faq/reset-password/index.html
@@ -30,17 +30,17 @@
     <link href="../../faq/reset-password/index.xml" rel="alternate" type="application/rss+xml" title="Homeassistant重置密码 :: HaBox 技术支持站">
     <link href="../../faq/reset-password/index.print.html" rel="alternate" type="text/html" title="Homeassistant重置密码 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../../css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1741570537"></script>
+    <link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../../css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -118,8 +118,8 @@
 <li>在浏览器访问<a href="http://homeassistant.local:7681/" rel="external" target="_self">http://homeassistant.local:7681</a>（或者用ip访问，比如http://192.168.3.198:7681/），</li>
 <li>在ha提示符后面执行</li>
 </ol>
-<div class="highlight wrap-code"><pre tabindex="0"><code>authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;</code></pre></div><p><a href="https://www.ha-box.xyz/faq/index.html#R-image-62e3c00209807f3325fac00d32021a28" rel="external" target="_self"><a href="#R-image-5eb48857014e72153b116d1092f4b12b" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5eb48857014e72153b116d1092f4b12b"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></a></p>
+<div class="highlight wrap-code"><pre tabindex="0"><code>authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;</code></pre></div><p><a href="https://www.ha-box.xyz/faq/index.html#R-image-62e3c00209807f3325fac00d32021a28" rel="external" target="_self"><a href="#R-image-32192b1f386529e53a9ac3fef96f6034" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-32192b1f386529e53a9ac3fef96f6034"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></a></p>
 <p>再回到<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123</a>登陆即可</p>
 
 <script
@@ -216,13 +216,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="../../js/search.js?1741570537" defer></script>
+        <script src="../../js/auto-complete.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="../../js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -254,6 +254,7 @@
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="../../faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="../../faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="../../faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="../../faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="../../faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -328,9 +329,9 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../../js/theme.js?1741570537" defer></script>
+    <script src="../../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../../js/theme.js?1741607855" defer></script>
 
 
   </body>
