--- a/public/installation/habox-over-greatwall/index.html
+++ b/public/installation/habox-over-greatwall/index.html
@@ -35,17 +35,17 @@
     <link href="../../installation/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../installation/habox-over-greatwall/index.print.html" rel="alternate" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1741570537" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1741570537" rel="stylesheet">
-    <link href="../../css/fonts.css?1741570537" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741570537" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1741570537" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1741570537" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1741570537" rel="stylesheet">
-    <link href="../../css/print.css?1741570537" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1741570537"></script>
+    <link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1741607855" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1741607855" rel="stylesheet">
+    <link href="../../css/fonts.css?1741607855" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1741607855" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1741607855" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1741607855" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1741607855" rel="stylesheet">
+    <link href="../../css/print.css?1741607855" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1741607855"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -127,25 +127,25 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="../../network/free-vless-node/index.html" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-9c6a5f62e0633c6e7d52b5d54a06544b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c6a5f62e0633c6e7d52b5d54a06544b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
+<p><a href="#R-image-2a1074fe1a091fb74a6abdbff4c622ea" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2a1074fe1a091fb74a6abdbff4c622ea"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-4fd236b548227602e4b4f3f907938885" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4fd236b548227602e4b4f3f907938885"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
+<p><a href="#R-image-0f4a044799854d612c97f31415bfac9b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0f4a044799854d612c97f31415bfac9b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-d8a51b0591e3f725490028b1ee37fd24" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d8a51b0591e3f725490028b1ee37fd24"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
+<p><a href="#R-image-558d5b107ab36465c46ee1b87737d6e1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-558d5b107ab36465c46ee1b87737d6e1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-330188a284040df89c13785b05b36fe1" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-330188a284040df89c13785b05b36fe1"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
+<p><a href="#R-image-c5435bf7b80cc142ec4c90d501ad8601" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c5435bf7b80cc142ec4c90d501ad8601"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-c041daf00426849022bd386dae608060" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c041daf00426849022bd386dae608060"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
+<p><a href="#R-image-68a98ad28b7746e6ace66c8a1160977d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-68a98ad28b7746e6ace66c8a1160977d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想，实现上网自由。</p>
@@ -244,13 +244,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1741570537" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1741570537" defer></script>
-        <script src="../../js/search.js?1741570537" defer></script>
+        <script src="../../js/auto-complete.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1741607855" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1741607855" defer></script>
+        <script src="../../js/search.js?1741607855" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -282,6 +282,7 @@
           <li data-nav-id="/faq/no-supervisor-in-sidebar/index.html" class=""><a class="padding" href="../../faq/no-supervisor-in-sidebar/index.html">侧边栏没有supervisor菜单项<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/clear-user-account/index.html" class=""><a class="padding" href="../../faq/clear-user-account/index.html">清除Homeassistant Box 账户信息<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/wireless-network-card/index.html" class=""><a class="padding" href="../../faq/wireless-network-card/index.html">无线网卡不能使用的临时解决方案<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/xiaomi-home/index.html" class=""><a class="padding" href="../../faq/xiaomi-home/index.html">重新安装最新的小米官方插件<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/faq/factory-reset/index.html" class=""><a class="padding" href="../../faq/factory-reset/index.html">重置Homeassistant盒子，恢复出厂设置<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
           <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -356,9 +357,9 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1741570537" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1741570537" defer></script>
-    <script src="../../js/theme.js?1741570537" defer></script>
+    <script src="../../js/clipboard.min.js?1741607855" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1741607855" defer></script>
+    <script src="../../js/theme.js?1741607855" defer></script>
 
 
   </body>
